Update and rename Problema.html to problema.html

--- a/problema.html
+++ b/problema.html
@@ -12,8 +12,8 @@
   <body>
     <div class="container-fluid bg-primary">
         <nav class="navbar navbar-inverse navbar-light bg-dark navbar-toggleable-md">
-            <img class="image-fluid" src="../IMG/Matematicas.png" width="100px" height="100px">
-            <a class="navbar-brand text-info" href="../HTML/Problema.html" style="font-size: 40px;">Página de la matemáticas</a>
+            <img class="image-fluid" src="Matematicas.png" width="100px" height="100px">
+            <a class="navbar-brand text-info" href="problema.html" style="font-size: 40px;">Página de la matemáticas</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                 <div class="navbar-nav">
                     <div class="row">
                         <div class="col-12">
-                            <a class="nav-item nav-link active ml-5" href="../HTML/Problema.html">Home</a>
+                            <a class="nav-item nav-link active ml-5" href="problema.html">Home</a>
                         </div>
                     </div>
                 </div>
@@ -87,6 +87,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../js/Op.js"></script>
+    <script src="op.js"></script>
 </body>
 </html>
