Update and rename problema.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid bg-primary">
         <nav class="navbar navbar-inverse navbar-light bg-dark navbar-toggleable-md">
             <img class="image-fluid" src="Matematicas.png" width="100px" height="100px">
-            <a class="navbar-brand text-info" href="problema.html" style="font-size: 40px;">Página de la matemáticas</a>
+            <a class="navbar-brand text-info" href="index.html" style="font-size: 40px;">Página de la matemáticas</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                 <div class="navbar-nav">
                     <div class="row">
                         <div class="col-12">
-                            <a class="nav-item nav-link active ml-5" href="problema.html">Home</a>
+                            <a class="nav-item nav-link active ml-5" href="index.html">Home</a>
                         </div>
                     </div>
                 </div>
